Fixes MDL-11676, Skip block links are broken in Internet Explorer 6.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1188,7 +1188,8 @@ a.skip-block, .skip-block {
   height:4px;
 }
 .skip-block-to {
-  font-size:1px;
+  display: block;
+  height: 1px;
 }
 
 .sideblock {
